* Added rendering of eclipse shadows
* Implemented longitude of axis for planet rotation elements
* Corrected inclinations of Saturn (now rings appear at proper tilt when viewed
  from Earth), Uranus, and Neptune.
* Added accurate orbital calculations for the eight largest moons of Saturn
* Textures for Ariel, Umbriel, Titania, and Umbriel from Bruckner.
* Improved planet labeling: less clutter, plus labels are displayed for distant
  objects at high zoom levels.
* Fixed rendering of ring systems so that planets with both rings and
  a cloud layer are rendered correctly.
* Added accurate orbital calculations for the five largest moons of Uranus
* Added option to render stars as points (for a less fuzzy appearance)
* Corrected sizing of planets' shadows on their ring systems
* Enabled used of extremely high resolution textures through splitting into
  subtextures.
* Corrected orbital elements for Ceres, Pallas, Juno, and Vesta.
* Added Ikeya-Zhang to solar system
* Fixed position calculation for orbits with 0.98 < e < 1
* Enabled rendering of 3DS meshes with transparent parts
* Unix Gtk: New Renderer Options
* Fixed colors on the Hubble model
* Fixed some clipping problems with 3DS meshes caused by bad center calculation
* Enhanced Locations menu to support full manipulation and categorization of
  saved locations.


1.2.3
* Fixed bug in texturefont.cpp that produce an error with some STL
  implementations (VS.NET, HPUX)
* Added elapsed time counter to movie recording UI
* Added support for orbits interpolated from sampled positions
* Fixed 'crosshair' appearance of eclipse shadows on some cards
* Enforced power of two texture size requirement--eliminates texture loading
  crashes on some systems
* UNIX: Modified GL extension handling code to make it possible to compile
  against Mesa 4 headers.
* Unix Gtk: removed bug in Text enter mode. (dramsey)
* Unix Gtk: Menus for new Labels. (dramsey)